# Ryna-Language

./: .gitignore  .travis.yml  404.html  Cargo.toml  LICENSE  README.md  docs_requirements.txt  index.html  mkdocs.yml
.github/workflows/: mkdocs.yml  rust.yml
benches/: bench.rs
benches/sources/: primality.nessa
css/: atom-one-dark.css  main.css
docs/: index.md
docs/css/: main.css  material-darker.css  reference.css
docs/js/: nessa.js  ryna.js
docs/pages/: contribute.md
pages/contribute/: index.html
search/: search_index.json
src/: annotations.rs  cache.rs  checks.rs  compilation.rs  config.rs  context.rs  debug.rs  docs.rs  execution.rs  functions.rs  inference.rs  interfaces.rs  lib.rs  macros.rs  main.rs  number.rs  object.rs  operations.rs  optimization.rs  parser.rs  patterns.rs  peephole_optimizer.rs  serialization.rs  translation.rs  types.rs  variables.rs
src/algorithms/: formats.rs  git.rs  html_ext.rs  integer_ext.rs  profiling.rs  regex_ext.rs  shell.rs
src/stdlib/: math.rs
src/structures/: ffi.rs  graph.rs  id_mapper.rs  jump_map.rs  mut_cell.rs  precedence_cache.rs  variable_map.rs
syntaxes/nessa-language-support/: CHANGELOG.md  README.md  package.json
syntaxes/nessa-language-support/syntaxes/: nessa.tmLanguage.json
test/: adt_assignment.nessa  adt_bin_tree.ryna  adt_generic_list.nessa  adt_generic_list.ryna  adt_list.nessa  adt_list.ryna  ambiguous_impl.ryna  array_access.nessa  array_init.nessa  array_transform.nessa  array_transform.ryna  basic_alias.ryna  bitwise.nessa  break_loops.nessa  continue_loops.ryna  destructors.ryna  dice.nessa  dice.ryna  do_blocks.ryna  e_approximation.nessa  exp_floats.nessa  file_manip.nessa  file_manip.ryna  implicit_lambda.ryna  ints.nessa  lambda_capture.ryna  lambdas.ryna  list_comprehension.nessa  map_array.nessa  mapped_iterator.nessa  mapped_iterator.ryna  ndl_macros.nessa  numeric_interface.ryna  parametric_interface.ryna  peano_arithmetic.nessa  peano_arithmetic.ryna  primality.nessa  random.nessa  random.ryna  rdl_macros.ryna  (+9 more)
test/batches/destructors/: adt.ryna  and_types.ryna  arrays.ryna  assignment.ryna  function.ryna  invalid.ryna  invalid_template.ryna  iterators.ryna  nested.ryna  nested_array.ryna  nested_iterator.ryna  or_types.ryna  simple.ryna  templated.ryna  templated_array.ryna  templated_iterator.ryna  templated_nested.ryna
test/batches/interfaces/: binary_interface_err.ryna  binary_interface_err_2.ryna  binary_interface_ok.ryna  function_interface_err.ryna  function_interface_err_2.ryna  function_interface_ok.nessa  nary_interface_err.ryna  nary_interface_err_2.nessa  nary_interface_ok.ryna  postfix_interface_err.ryna  postfix_interface_err_2.nessa  postfix_interface_ok.ryna  prefix_interface_err.nessa  prefix_interface_err.ryna  prefix_interface_err_2.nessa  prefix_interface_ok.ryna
test/batches/macros/: block_macro_err.nessa  block_macro_err.ryna  block_macro_err_2.nessa  block_macro_ok.nessa  block_macro_ok.ryna  block_macro_ok_many.nessa  block_macro_ok_many.ryna  expr_macro_err.nessa  expr_macro_err_2.nessa  expr_macro_ok.nessa  fn_macro_ok.nessa  fn_macro_ok_ex.nessa
test/batches/moving/: forwarding_invalid.nessa  forwarding_mut_to_mut.ryna  forwarding_mut_to_ref.nessa  forwarding_mut_to_val.nessa  forwarding_mut_to_val.ryna  forwarding_ref_to_ref.nessa  forwarding_ref_to_val.nessa  move_access.nessa  move_access.ryna
test/batches/stack/: fail.nessa  ok.nessa
test/lib/array_extensions/: main.nessa  nessa_config.yml  ryna_config.yml
test/lib/cast/: main.nessa  nessa_config.yml  ryna_config.yml
test/lib/hash/: main.nessa  nessa_config.yml
test/lib/hashmap/: main.nessa  nessa_config.yml
test/lib/hashset/: main.nessa  (+1 more)
(+179 files in other folders)
