[package]
name = "nessa-language"
version = "0.1.0"
authors = ["Gabie <jacadel1998@hotmail.com>"]
edition = "2018"

[lib]
name = "nessa"
path = "src/lib.rs"

[[bin]]
name = "nessa"
path = "src/main.rs"

[dependencies]
seq-macro = "0.2"
rand = "*"
impl_ops = "*"
rayon = "1.5"
bit-set = "*"
nom = "7"
nom_locate = "4.1.0"
clap = "4.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
glob = "0.2.8"
md5 = "*"
colored = "2"
levenshtein = "1.0.5"
rustc-hash = "1.1.0"
bitcode = { version = "0.4.0", features = ["serde"] }
inquire = "0.6.2"
regex = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
num-traits = "0.2.17"
num-bigint = { version = "0.4.4", features = ["rand"] }

[[bench]]
name = "bench"
harness = false
