[package]
name = "nessa-language"
description = "An extensible programming language with a strong type system"
documentation = "https://gabie-of-the-bo.github.io/Nessa-Language/"
homepage = "https://gabie-of-the-bo.github.io/Nessa-Language/"
repository = "https://github.com/Gabie-of-the-Bo/Nessa-Language"
version = "0.3.2"
authors = ["Javier Castillo <javier.castillo.dev@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "nessa"
path = "src/lib.rs"

[[bin]]
name = "nessa"
path = "src/main.rs"

[dependencies]
seq-macro = "0.2"
rand = "0.8.5"
impl_ops = "0.1.1"
rayon = "1.5"
bit-set = "0.5.3"
nom = "7"
nom_locate = "4.1.0"
clap = "4.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
glob = "0.2.8"
md5 = "0.7.0"
colored = "2"
levenshtein = "1.0.5"
rustc-hash = "1.1.0"
bitcode = { version = "0.4.0", features = ["serde"] }
inquire = "0.6.2"
regex = "1.10.0"
directories = "5.0.1"
lazy_static = "1.4.0"
git2 = "0.18.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
num-traits = "0.2.17"
num-bigint = { version = "0.4.4", features = ["rand"] }
panic-message = "0.3.0"

[[bench]]
name = "bench"
harness = false
