[package]
name = "ryna-language"
description = "An extensible programming language with a strong type system"
keywords = ["programming-language", "interpreter"]
categories = ["command-line-utilities", "compilers"]
documentation = "https://gabie-of-the-bo.github.io/Ryna-Language/"
homepage = "https://gabie-of-the-bo.github.io/Ryna-Language/"
repository = "https://github.com/Gabie-of-the-Bo/Ryna-Language"
version = "0.9.2"
authors = ["Javier Castillo <javier.castillo.dev@gmail.com>"]
edition = "2018"
license = "MIT"

[profile.release] 
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.release-debug] 
inherits = "release"
codegen-units = 16
lto = false
panic = "unwind"

[lib]
name = "ryna"
path = "src/lib.rs"

[[bin]]
name = "ryna"
path = "src/main.rs"

[dependencies]
seq-macro = "0.2"
rand = "0.8.5"
rayon = "1.9.0"
nom = "7.1.3"
nom_locate = "4.2.0"
clap = "4.4.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
serde_json = "1.0"
glob = "0.2.8"
md5 = "0.7.0"
colored = "2.1.0"
levenshtein = "1.0.5"
rustc-hash = "1.1.0"
bitcode = { version = "0.5.1", features = ["serde"] }
inquire = "0.7.0"
regex = "1.10.0"
directories = "5.0.1"
lazy_static = "1.4.0"
git2 = "0.18.2"
malachite = { version = "0.4.5", features = ["enable_serde", "random"] }
derive_builder = "0.20.0"
mimalloc = { version = "0.1.41", default-features = false }
rclite = "0.2.4"
tabled = "0.15.0"
libloading = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
panic-message = "0.3.0"

[[bench]]
name = "bench"
harness = false
